# OURCraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  client.h  engine.cpp  engine.h  main.cpp  server.cpp  server.h
client/: input.h  render.h  view.cpp  view.h
client/render/: asset_loaders.cpp  asset_loaders.h  block.h  font.h  gui.h  model.cpp
client/render/asset_loaders/: model.h  shader.h  texture.h
client/view/: camera.h  projection.h
engine/: input.cpp
engine/objects/: block_object.cpp  block_object.h  environment_object.cpp  environment_object.h  gui_object.cpp  gui_object.h  model_object.cpp  model_object.h
engine/render/: font.h  model.h  shader.h  texture.h
server/: player.h  world.h
server/player/: inventory.h
server/world/: chunk.h  entity.h
